# hekla

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ansicolor_sink-inl.h.DAF51EA385FACD36.idx  ansicolor_sink.h.4F859621F6E9B77F.idx  async.cpp.07405EBC31F107F3.idx  async.h.84573EA8A404DB75.idx  async_logger-inl.h.928BAF59739FA734.idx  async_logger.h.7B05E7B635D5E58B.idx  backtracer-inl.h.FAF712F6A79798D7.idx  backtracer.h.D319D8174418F7FF.idx  base.h.5BF8434E54CDF0C7.idx  base_sink-inl.h.372A86C59769196C.idx  base_sink.h.2EAF82F06FCC9762.idx  basic_file_sink-inl.h.28365324C913C3D4.idx  basic_file_sink.h.23DFEC97691FAB92.idx  bundled_fmtlib_format.cpp.9F8A34F1F22B3A91.idx  cfg.cpp.3D8BBC74DFF4F67A.idx  circular_q.h.110E17277B121C1E.idx  color_sinks.cpp.D6E25ED08F04B63D.idx  common-inl.h.3EEAD3A58165EFA2.idx  common.h.4E7B95474E84E406.idx  console_globals.h.4150DDABE4F0F0B5.idx  context.c.7FD6FC0ECD5105F1.idx  egl_context.c.59997676A43E91D4.idx  egl_context.h.829B62EB32C28A86.idx  file_helper-inl.h.990661285F41C00E.idx  file_helper.h.C0B85C6D2DEF13DB.idx  file_sinks.cpp.47C4AFFD775823AD.idx  fmt.h.89A1017814C5C23E.idx  fmt_helper.h.390B71E968A20518.idx  format-inl.h.7C4E6C2593596E49.idx  format.h.60294B430EF2C0DE.idx  formatter.h.DE11CC8BEE3FEBE8.idx  glad.c.9F77AF171F0215DC.idx  glad.h.6622F8224C0B9826.idx  glfw3.h.F4DDBD3FBD77AC90.idx  glx_context.c.2B4E1261F78C68C9.idx  glx_context.h.3824A52FB34098AD.idx  helpers-inl.h.285A92C5DCE29107.idx  helpers.h.2919DE327B5B3E49.idx  init.c.7FEEDC3428523EB7.idx  input.c.6CECAEF946A32F55.idx  (+55 more)
src/: main.cpp
